@@ -34,6 +34,9 @@ New functionality
 AOD
 - fixed retrieval of Aerosol Optical Depth from MOD08 data
 
+LANDSAT
+- products added: dn (digital numbers)
+
 MODIS
 - fixed segfault in indices and cleaned up extraneous printing
 - fixed nodata value in ndvi8 product
